tests/errors/semantic/blocking/APPEND_LIST_INCOMPATIBLE_TYPES_0.py
import numpy as np
a = [1,2,3]
b = np.int32(4)
a.append(b)